Massive structure changes and kafka
